cabal-version:   3.0
name:            ui
version:         0.1.0.0
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        MyLib
        Html

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base >=3 && <5

executable ui
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=3 && <5,
        ui

test-suite ui-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=3 && <5,
        ui
